# Python-Codebase-Visualizer

./: .gitignore  AI_WORKFLOW_WRITEUP.md  README.md  check_graph.py  pyproject.toml
fixtures/cycle/pkg/: __init__.py  a.py  b.py
fixtures/decorators/pkg/: views.py
fixtures/dynamic_all/pkg/: __init__.py  core.py
fixtures/getattr_dispatch/pkg/: dispatch.py
fixtures/reexport_chain/: user.py
fixtures/reexport_chain/pkg/: __init__.py  core.py
fixtures/wildcard/pkg/: __init__.py  core.py
pyviz/: __init__.py  cli.py  models.py
pyviz/pipeline/: __init__.py  p1_discovery.py  p2_parse.py  p3_resolve.py  p4_edges.py  p5_trace.py  p6_merge.py  p7_emit.py
tests/: test_invariants.py  test_p3_resolve.py
viewer/: .env.example  package-lock.json  package.json
viewer/app/: globals.css  layout.tsx  page.tsx
viewer/components/: FilterBar.tsx  GraphView.tsx  NodePanel.tsx
viewer/lib/: layout.ts  types.ts
