[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyviz"
version = "0.1.0"
description = "Python codebase visualizer — hybrid CLI + web viewer"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov",
]
trace = [
    "coverage[toml]>=7.0",
    "pytest>=7.4",
]

[project.scripts]
pyviz = "pyviz.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyviz*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
